hubSide/force-app/main/default/objects/Activity/fields/Actiontype__c.field-meta.xml
<CustomField>
    <fullName>Actiontype__c</fullName>
    <label>Motif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coût</fullName>
            </value>
            <value>
                <fullName>Délai</fullName>
            </value>
            <value>
                <fullName>Coût &amp; Délai</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>