hubSide/force-app/main/default/objects/Activity/fields/Affectation__c.field-meta.xml
<CustomField>
    <fullName>Affectation__c</fullName>
    <label>Affectation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TC Paiement urgence</fullName>
            </value>
            <value>
                <fullName>TC Paiement Classique​</fullName>
            </value>
            <value>
                <fullName>TC demande document</fullName>
            </value>
            <value>
                <fullName>TC Classique</fullName>
            </value>
            <value>
                <fullName>ADM Impression</fullName>
            </value>
            <value>
                <fullName>2nde prise en charge sur offre de rétention PF/PM</fullName>
                <isActive>false</isActive>
                <label>2nde prise en charge sur offre de rétention PF/PM</label>
            </value>
            <value>
                <fullName>Absence d’un document obligatoire</fullName>
                <isActive>false</isActive>
                <label>Absence d’un document obligatoire</label>
            </value>
            <value>
                <fullName>Autre</fullName>
                <isActive>false</isActive>
                <label>Autre</label>
            </value>
            <value>
                <fullName>Carte SIM absente de l’appareil garanti</fullName>
                <isActive>false</isActive>
                <label>Carte SIM absente de l’appareil garanti</label>
            </value>
            <value>
                <fullName>Dommages esthétiques</fullName>
                <isActive>false</isActive>
                <label>Dommages esthétiques</label>
            </value>
            <value>
                <fullName>Dossier KO</fullName>
                <isActive>false</isActive>
                <label>Dossier KO</label>
            </value>
            <value>
                <fullName>Délais de déclaration</fullName>
                <isActive>false</isActive>
                <label>Délais de déclaration</label>
            </value>
            <value>
                <fullName>Hors délai SIM / DP</fullName>
                <isActive>false</isActive>
                <label>Hors délai SIM / DP</label>
            </value>
            <value>
                <fullName>Produit acheté hors 12 mois / 36 mois</fullName>
                <isActive>false</isActive>
                <label>Produit acheté hors 12 mois / 36 mois</label>
            </value>
            <value>
                <fullName>Sans suite</fullName>
                <isActive>false</isActive>
                <label>Sans suite</label>
            </value>
            <value>
                <fullName>Typologie de sinistre non couvert</fullName>
                <isActive>false</isActive>
                <label>Typologie de sinistre non couvert</label>
            </value>
            <value>
                <fullName>Typologie produit non couvert par CG</fullName>
                <isActive>false</isActive>
                <label>Typologie produit non couvert par CG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>