hubSide/force-app/main/default/objects/Activity/fields/CallDateTime__c.field-meta.xml
<CustomField>
    <fullName>CallDateTime__c</fullName>
    <description>Date et Heure à laquelle l&apos;appel a été réalisé, renseigné dans le flow de consignation d&apos;appel</description>
    <label>Date et Heure appel</label>
    <type>DateTime</type>
</CustomField>