hubSide/force-app/main/default/objects/Activity/fields/CallReason__c.field-meta.xml
<CustomField>
    <fullName>CallReason__c</fullName>
    <description>Raison de l&apos;appel, défini dans le flow de consignation d&apos;appel</description>
    <label>Motif appel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InformationRequest</fullName>
                <label>Demande information</label>
            </value>
            <value>
                <fullName>ClaimFollowUp</fullName>
                <label>Relance dossier sinistre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>