hubSide/force-app/main/default/objects/Activity/fields/Canal_communication__c.field-meta.xml
<CustomField>
    <fullName>Canal_communication__c</fullName>
    <label>Canal communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appel entrant</fullName>
            </value>
            <value>
                <fullName>Appel sortant</fullName>
            </value>
            <value>
                <fullName>Mail entrant</fullName>
            </value>
            <value>
                <fullName>Mail sortant</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
                <label>Courrier</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Téléphone</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>