hubSide/force-app/main/default/objects/Activity/fields/Code_template__c.field-meta.xml
<CustomField>
    <fullName>Code_template__c</fullName>
    <description>Code du template d&apos;email à utiliser</description>
    <label>Code template</label>
    <length>150</length>
    <type>Text</type>
</CustomField>