hubSide/force-app/main/default/objects/Activity/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <description>Date à laquelle la décision sur la tâche a été prise, définie dans le flow d&apos;action SAV</description>
    <label>Date décision</label>
    <type>Date</type>
</CustomField>