hubSide/force-app/main/default/objects/Activity/fields/Heure_rappel__c.field-meta.xml
<CustomField>
    <fullName>Heure_rappel__c</fullName>
    <label>Heure de rappel</label>
    <type>Time</type>
</CustomField>