hubSide/force-app/main/default/objects/Activity/fields/isDeleteAuthorized__c.field-meta.xml
<CustomField>
    <fullName>isDeleteAuthorized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDeleteAuthorized</label>
    <type>Checkbox</type>
</CustomField>