hubSide/force-app/main/default/objects/Activity/fields/Motif_cloture__c.field-meta.xml
<CustomField>
    <fullName>Motif_cloture__c</fullName>
    <description>Sinistre</description>
    <label>Motif de clôture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Action__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque demandé​</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
            <value>
                <fullName>Refus client​</fullName>
            </value>
            <value>
                <fullName>Client non joignable</fullName>
            </value>
            <value>
                <fullName>Non associé</fullName>
            </value>
            <value>
                <fullName>Règlé client</fullName>
            </value>
            <value>
                <fullName>Client informé refus</fullName>
            </value>
            <value>
                <fullName>Client Valide Choix</fullName>
            </value>
            <value>
                <fullName>Rappel client programmé</fullName>
            </value>
            <value>
                <fullName>Changement adresse effectué</fullName>
            </value>
            <value>
                <fullName>Client informé SAV refusé</fullName>
            </value>
            <value>
                <fullName>Messagerie</fullName>
            </value>
            <value>
                <fullName>Client non joignable après plusieurs tentatives</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
                <isActive>false</isActive>
                <label>Autres</label>
            </value>
            <value>
                <fullName>CB ou chèque</fullName>
                <isActive>false</isActive>
                <label>CB ou chèque</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>