hubSide/force-app/main/default/objects/Activity/fields/Motif_Objet__c.field-meta.xml
<CustomField>
    <fullName>Motif_Objet__c</fullName>
    <label>Motif Objet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Défaut de gamme</fullName>
            </value>
            <value>
                <fullName>Hors stock</fullName>
            </value>
            <value>
                <fullName>Prospect à qualifier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>