hubSide/force-app/main/default/objects/Activity/fields/Nombre_de_rappel_client__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_rappel_client__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de rappel client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>