hubSide/force-app/main/default/objects/Activity/fields/Raison_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Raison_fermeture__c</fullName>
    <label>Raison de fermeture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>