hubSide/force-app/main/default/objects/Activity/fields/Record_type_name__c.field-meta.xml
<CustomField>
    <fullName>Record_type_name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record type name</label>
    <type>Text</type>
</CustomField>