hubSide/force-app/main/default/objects/Activity/fields/Satisfaction_client__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_client__c</fullName>
    <label>Satisfaction client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfait</fullName>
            </value>
            <value>
                <fullName>Moyennement satisfait</fullName>
            </value>
            <value>
                <fullName>Non satisfait</fullName>
            </value>
            <value>
                <fullName>Client à risque</fullName>
                <isActive>false</isActive>
                <label>Client à risque</label>
            </value>
            <value>
                <fullName>Content</fullName>
                <isActive>false</isActive>
                <label>Content</label>
            </value>
            <value>
                <fullName>Non content</fullName>
                <isActive>false</isActive>
                <label>Non content</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>