hubSide/force-app/main/default/objects/Activity/fields/Sens_communication__c.field-meta.xml
<CustomField>
    <fullName>Sens_communication__c</fullName>
    <label>Sens communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrant</fullName>
            </value>
            <value>
                <fullName>Sortant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>