hubSide/force-app/main/default/objects/Activity/fields/Sous_type_Action__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_Action__c</fullName>
    <label>Detail Action</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_Action__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Activity_SubTypeAction</valueSetName>
    </valueSet>
</CustomField>