hubSide/force-app/main/default/objects/Activity/fields/TC_ParentTaskId__c.field-meta.xml
<CustomField>
    <fullName>TC_ParentTaskId__c</fullName>
    <label>TC_ParentTaskId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>