hubSide/force-app/main/default/objects/Activity/fields/TECH_DueDate__c.field-meta.xml
<CustomField>
    <fullName>TECH_DueDate__c</fullName>
    <formula>ActivityDate</formula>
    <label>TECH_DueDate</label>
    <type>Date</type>
</CustomField>