hubSide/force-app/main/default/objects/Activity/fields/Tech_Stage__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stage__c</fullName>
    <label>Tech_Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
                <label>Terminé</label>
            </value>
            <value>
                <fullName>Fermé KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>