hubSide/force-app/main/default/objects/Activity/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Thème</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Accord / refus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>