hubSide/force-app/main/default/objects/Activity/fields/Type_Action__c.field-meta.xml
<CustomField>
    <fullName>Type_Action__c</fullName>
    <label>Type Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_TypeAction</valueSetName>
    </valueSet>
</CustomField>