hubSide/force-app/main/default/objects/Activity/fields/Type_Action_GS__c.field-meta.xml
<CustomField>
    <fullName>Type_Action_GS__c</fullName>
    <label>Type Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande de document</fullName>
            </value>
            <value>
                <fullName>Demande Règlement Contrat​</fullName>
            </value>
            <value>
                <fullName>Demande Règlement Franchise​</fullName>
            </value>
            <value>
                <fullName>DemandeReglementReparation​</fullName>
                <label>Demande Règlement Réparation​</label>
            </value>
            <value>
                <fullName>Déclencher réparation</fullName>
            </value>
            <value>
                <fullName>Validation Prime</fullName>
            </value>
            <value>
                <fullName>Validation Réparation​</fullName>
            </value>
            <value>
                <fullName>Validation d’un échange​</fullName>
            </value>
            <value>
                <fullName>Refus</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>