hubSide/force-app/main/default/objects/Activity/fields/Type_Action_TC__c.field-meta.xml
<CustomField>
    <fullName>Type_Action_TC__c</fullName>
    <label>Type Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TransportVoucherRequest</fullName>
                <label>Demande bon de transport</label>
            </value>
            <value>
                <fullName>WaiverFormSent</fullName>
                <label>Envoi du formulaire de renonciation</label>
            </value>
            <value>
                <fullName>SwitchTransportVoucherRequest</fullName>
                <label>Demande bon transport switch</label>
            </value>
            <value>
                <fullName>WaiverFormRequest</fullName>
                <label>Demande formulaire de renonciation</label>
            </value>
            <value>
                <fullName>DeductiblePaymentAttestationRequest</fullName>
                <label>Demande d&apos;attestation de paiement - Franchise</label>
            </value>
            <value>
                <fullName>AnnualSubscriptionPaymentAttestationRequest</fullName>
                <label>Demande d&apos;attestation de paiement - Cotisation annuelle</label>
            </value>
            <value>
                <fullName>NonCompensationAttestationRequest</fullName>
                <label>Demande d&apos;attestation de non indemnisation</label>
            </value>
            <value>
                <fullName>DocumentListRequest</fullName>
                <label>Demande de la liste des documents</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>